--- a/index.html
+++ b/index.html
@@ -27,15 +27,27 @@
         background-position: 0% 50%;
       }
     }
+
+    img {
+      width: 150px;
+      height: 150px;
+      border-radius: 50%;
+      object-fit: cover;
+      border: 3px solid #555;
+      display: block;
+      margin: 30px auto;
     }
+
     h1 {
       font-size: 2.5rem;
       color: #333;
     }
+
     p {
       font-size: 1.2rem;
       color: #666;
     }
+
     .social-links {
       margin-top: 30px;
       display: flex;
@@ -43,6 +55,7 @@
       gap: 20px;
       flex-wrap: wrap;
     }
+
     .social-links a {
       display: inline-block;
       padding: 15px 25px;
@@ -54,10 +67,12 @@
       font-weight: 600;
       transition: all 0.2s ease;
     }
+
     .social-links a:hover {
       transform: scale(1.05);
       background-color: #f0f0f0;
     }
+
     footer {
       margin-top: 50px;
       font-size: 0.9rem;
@@ -66,6 +81,8 @@
   </style>
 </head>
 <body>
+
+  <img src="https://raw.githubusercontent.com/uggiomer/site/main/pp%20dc.jpg" alt="Profil Fotoğrafı" />
 
   <h1>Hoş Geldin!</h1>
   <p>sosyal medya hesaplarım</p>
