--- a/index.html
+++ b/index.html
@@ -4,29 +4,31 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>uggiomer</title>
-  <link rel="shortcut icon" href="dcs.ico" type="image/x-icon">
+  <link rel="icon" href="dc.ico" type="image/x-icon">
+
   <style>
-    body {
+    html, body {
       margin: 0;
+      padding: 0;
+      height: 100%;
       font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to right, #ff9a00, #ffd700);
-      text-align: center;
-      padding: 40px 20px;
-      background: linear-gradient(-45deg, #ff9a9e, #fad0c4, #a1c4fd, #c2e9fb);
-      background-size: 400% 400%;
-      animation: animatedGradient 15s ease infinite;
+      overflow: hidden;
     }
 
-    @keyframes animatedGradient {
-      0% {
-        background-position: 0% 50%;
-      }
-      50% {
-        background-position: 100% 50%;
-      }
-      100% {
-        background-position: 0% 50%;
-      }
+    #particles-js {
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      background: #0d0d0d;
+      z-index: -1;
+    }
+
+    body {
+      text-align: center;
+      padding: 40px 20px;
+      color: white;
+      position: relative;
+      z-index: 1;
     }
 
     img {
@@ -34,19 +36,17 @@
       height: 150px;
       border-radius: 50%;
       object-fit: cover;
-      border: 3px solid #555;
+      border: 3px solid #fff;
       display: block;
       margin: 30px auto;
     }
 
     h1 {
       font-size: 2.5rem;
-      color: #333;
     }
 
     p {
       font-size: 1.2rem;
-      color: #666;
     }
 
     .social-links {
@@ -60,11 +60,11 @@
     .social-links a {
       display: inline-block;
       padding: 15px 25px;
-      background-color: #fff;
+      background-color: rgba(255, 255, 255, 0.8);
       border-radius: 12px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
       text-decoration: none;
-      color: #222;
+      color: #000;
       font-weight: 600;
       transition: all 0.2s ease;
     }
@@ -77,11 +77,13 @@
     footer {
       margin-top: 50px;
       font-size: 0.9rem;
-      color: #aaa;
+      color: #ccc;
     }
   </style>
 </head>
 <body>
+
+  <div id="particles-js"></div>
 
   <img src="https://raw.githubusercontent.com/uggiomer/site/main/pp%20dc.jpg" alt="Profil Fotoğrafı" />
 
@@ -91,12 +93,21 @@
   <div class="social-links">
     <a href="https://instagram.com/uggiomer18" target="_blank">📸 Instagram</a>
     <a href="https://youtube.com/@ROGIN97" target="_blank">▶️ YouTube</a>
-    <a href="https://discord.gg/https://discord.gg/cTfzBf4Cx3" target="_blank">💬 Discord</a>
+    <a href="https://discord.gg/cTfzBf4Cx3" target="_blank">💬 Discord</a>
   </div>
 
   <footer>
-    &copy; 2025 attempt by uggiomer:)
+    &copy; 2025 attempt by uggiomer :)
   </footer>
 
-</body>
-</html>
+  <!-- particles.js script -->
+  <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+  <script>
+    particlesJS("particles-js", {
+      "particles": {
+        "number": {
+          "value": 100,
+          "density": {
+            "enable": true,
+            "value_area": 800
+          }
