--- a/index.html
+++ b/index.html
@@ -4,29 +4,22 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>uggiomer</title>
-  <link rel="icon" href="dc.ico" type="image/x-icon">
+  <link rel="icon" href="favicon.png" type="image/png" />
   <style>
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to right, #ff9a00, #ffd700);
-      text-align: center;
-      padding: 40px 20px;
       background: linear-gradient(-45deg, #ff9a9e, #fad0c4, #a1c4fd, #c2e9fb);
       background-size: 400% 400%;
       animation: animatedGradient 15s ease infinite;
+      text-align: center;
+      padding: 40px 20px;
     }
 
     @keyframes animatedGradient {
-      0% {
-        background-position: 0% 50%;
-      }
-      50% {
-        background-position: 100% 50%;
-      }
-      100% {
-        background-position: 0% 50%;
-      }
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
     }
 
     img {
@@ -50,7 +43,7 @@
     }
 
     .social-links {
-      margin-top: 30px;
+      margin-top: 50px;
       display: flex;
       justify-content: center;
       gap: 20px;
@@ -75,7 +68,7 @@
     }
 
     footer {
-      margin-top: 50px;
+      margin-top: 60px;
       font-size: 0.9rem;
       color: #aaa;
     }
@@ -86,16 +79,16 @@
   <img src="https://raw.githubusercontent.com/uggiomer/site/main/pp%20dc.jpg" alt="Profil Fotoğrafı" />
 
   <h1>Hoş Geldin!</h1>
-  <p>sosyal medya hesaplarım</p>
+  <p>Sosyal medya hesaplarım</p>
 
   <div class="social-links">
     <a href="https://instagram.com/uggiomer18" target="_blank">📸 Instagram</a>
     <a href="https://youtube.com/@ROGIN97" target="_blank">▶️ YouTube</a>
-    <a href="https://discord.gg/https://discord.gg/cTfzBf4Cx3" target="_blank">💬 Discord</a>
+    <a href="https://discord.gg/cTfzBf4Cx3" target="_blank">💬 Discord</a>
   </div>
 
   <footer>
-    &copy; 2025 attempt by uggiomer:)
+    &copy; 2025 attempt by uggiomer :)
   </footer>
 
 </body>
