--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
   <!-- Arka Plan Videosu -->
   <video class="video-bg" autoplay muted loop>
-    <source src="videoplayback (1).mp4" type="video/mp4">
+    <source src="https://streamable.com/kcgptz" type="video/mp4">
     Tarayıcınız video etiketini desteklemiyor.
   </video>
 
