--- a/index.html
+++ b/index.html
@@ -4,20 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>uggiomer</title>
-  <link rel="shortcut icon" href="dcs.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="dcs.ico" type="image/x-icon">
   <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      text-align: center;
-      padding: 40px 20px;
-      color: #fff;
-      position: relative;
-      z-index: 0;
-      background: black; /* video yüklenene kadar siyah */
-    }
-
-    #background-video {
+    #bg-video {
       position: fixed;
       right: 0;
       bottom: 0;
@@ -29,7 +18,19 @@
       object-fit: cover;
     }
 
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: none;
+      text-align: center;
+      padding: 40px 20px;
+      position: relative;
+      color: white;
+    }
+
     img {
+      position: relative;
+      z-index: 10;
       width: 150px;
       height: 150px;
       border-radius: 50%;
@@ -37,22 +38,12 @@
       border: 3px solid #555;
       display: block;
       margin: 30px auto;
-      position: relative;
-      z-index: 1;
     }
 
-    h1 {
-      font-size: 2.5rem;
+    h1, p, .social-links, footer {
       position: relative;
-      z-index: 1;
-      text-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
-    }
-
-    p {
-      font-size: 1.2rem;
-      position: relative;
-      z-index: 1;
-      text-shadow: 0 0 6px rgba(0, 0, 0, 0.5);
+      z-index: 10;
+      color: white;
     }
 
     .social-links {
@@ -61,8 +52,6 @@
       justify-content: center;
       gap: 20px;
       flex-wrap: wrap;
-      position: relative;
-      z-index: 1;
     }
 
     .social-links a {
@@ -70,7 +59,7 @@
       padding: 15px 25px;
       background-color: rgba(255, 255, 255, 0.8);
       border-radius: 12px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
       text-decoration: none;
       color: #222;
       font-weight: 600;
@@ -85,16 +74,13 @@
     footer {
       margin-top: 60px;
       font-size: 0.9rem;
-      position: relative;
-      z-index: 1;
-      text-shadow: 0 0 3px rgba(0, 0, 0, 0.4);
-      color: #ccc;
+      color: rgba(255,255,255,0.7);
     }
   </style>
 </head>
 <body>
 
-  <video autoplay muted loop id="background-video" playsinline>
+  <video autoplay muted loop id="bg-video" playsinline>
     <source src="video.mp4" type="video/mp4" />
     Tarayıcınız video etiketini desteklemiyor.
   </video>
