--- a/index.html
+++ b/index.html
@@ -80,11 +80,13 @@
 </head>
 <body>
 
+  <!-- Arka Plan Videosu -->
   <video autoplay muted loop id="bg-video" playsinline>
     <source src="video.mp4" type="video/mp4" />
     Tarayıcınız video etiketini desteklemiyor.
   </video>
 
+  <!-- Profil Fotoğrafı -->
   <img src="https://raw.githubusercontent.com/uggiomer/site/main/pp%20dc.jpg" alt="Profil Fotoğrafı" />
 
   <h1>Hoş Geldin!</h1>
@@ -94,6 +96,7 @@
     <a href="https://instagram.com/uggiomer18" target="_blank">📸 Instagram</a>
     <a href="https://youtube.com/@ROGIN97" target="_blank">▶️ YouTube</a>
     <a href="https://discord.gg/cTfzBf4Cx3" target="_blank">💬 Discord</a>
+    <a href="https://open.spotify.com/playlist/25Pc1B2hNdFlz84t2Pw0Hg?si=54bede176f2d4c86" target="_blank">🎧 Spotify</a>
   </div>
 
   <footer>
