--- a/index.html
+++ b/index.html
@@ -3,9 +3,88 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>uggiomer - Müzik Butonu</title>
+  <title>uggiomer</title>
+  <link rel="shortcut icon" href="dcs.ico" type="image/x-icon" />
   <style>
-    /* Butonu sağ üst köşeye yerleştir */
+    /* Arka plan video */
+    #bg-video {
+      position: fixed;
+      right: 0;
+      bottom: 0;
+      min-width: 100%;
+      min-height: 100%;
+      width: auto;
+      height: auto;
+      z-index: -1;
+      object-fit: cover;
+      filter: brightness(0.7); /* Videoyu biraz karartır, yazı okunur */
+    }
+
+    /* Body düzeni */
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: none;
+      text-align: center;
+      padding: 40px 20px;
+      position: relative;
+      color: white;
+    }
+
+    /* Profil fotoğrafı */
+    img {
+      position: relative;
+      z-index: 10;
+      width: 150px;
+      height: 150px;
+      border-radius: 50%;
+      object-fit: cover;
+      border: 3px solid #555;
+      display: block;
+      margin: 30px auto;
+    }
+
+    /* Yazılar ve linkler üstte */
+    h1, p, .social-links, footer {
+      position: relative;
+      z-index: 10;
+      color: white;
+      text-shadow: 0 0 8px rgba(0,0,0,0.7);
+    }
+
+    /* Sosyal medya linkleri */
+    .social-links {
+      margin-top: 50px;
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      flex-wrap: wrap;
+    }
+
+    .social-links a {
+      display: inline-block;
+      padding: 15px 25px;
+      background-color: rgba(255, 255, 255, 0.8);
+      border-radius: 12px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      text-decoration: none;
+      color: #222;
+      font-weight: 600;
+      transition: all 0.2s ease;
+    }
+
+    .social-links a:hover {
+      transform: scale(1.05);
+      background-color: #f0f0f0;
+    }
+
+    footer {
+      margin-top: 60px;
+      font-size: 0.9rem;
+      color: rgba(255,255,255,0.7);
+    }
+
+    /* Müzik butonu sağ üstte */
     #music-button {
       position: fixed;
       top: 20px;
@@ -26,6 +105,28 @@
   </style>
 </head>
 <body>
+
+  <!-- Arka plan video -->
+  <video autoplay muted loop id="bg-video" playsinline>
+    <source src="video.mp4" type="video/mp4" />
+    Tarayıcınız video etiketini desteklemiyor.
+  </video>
+
+  <!-- Profil fotoğrafı -->
+  <img src="https://raw.githubusercontent.com/uggiomer/site/main/pp%20dc.jpg" alt="Profil Fotoğrafı" />
+
+  <h1>Hoş Geldin!</h1>
+  <p>Sosyal medya hesaplarım</p>
+
+  <div class="social-links">
+    <a href="https://instagram.com/uggiomer18" target="_blank">📸 Instagram</a>
+    <a href="https://youtube.com/@ROGIN97" target="_blank">▶️ YouTube</a>
+    <a href="https://discord.gg/cTfzBf4Cx3" target="_blank">💬 Discord</a>
+  </div>
+
+  <footer>
+    &copy; 2025 attempt by uggiomer :)
+  </footer>
 
   <!-- Müzik aç/kapat butonu -->
   <button id="music-button">Müzik Aç</button>
