--- a/index.html
+++ b/index.html
@@ -6,44 +6,36 @@
   <title>uggiomer</title>
   <link rel="shortcut icon" href="dcs.ico" type="image/x-icon">
   <style>
-    #bg-video {
-      position: fixed;
-      right: 0;
-      bottom: 0;
-      min-width: 100%;
-      min-height: 100%;
-      width: auto;
-      height: auto;
-      z-index: -1;
-      object-fit: cover;
-    }
-
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: none;
+      background-color: #111;
+      color: white;
       text-align: center;
       padding: 40px 20px;
-      position: relative;
-      color: white;
+    }
+
+    #music-button {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      padding: 10px 20px;
+      background-color: white;
+      color: black;
+      border: none;
+      border-radius: 8px;
+      font-weight: bold;
+      cursor: pointer;
+      z-index: 100;
     }
 
     img {
-      position: relative;
-      z-index: 10;
       width: 150px;
       height: 150px;
       border-radius: 50%;
-      object-fit: cover;
       border: 3px solid #555;
-      display: block;
       margin: 30px auto;
-    }
-
-    h1, p, .social-links, footer {
-      position: relative;
-      z-index: 10;
-      color: white;
+      display: block;
     }
 
     .social-links {
@@ -55,36 +47,36 @@
     }
 
     .social-links a {
-      display: inline-block;
-      padding: 15px 25px;
-      background-color: rgba(255, 255, 255, 0.8);
-      border-radius: 12px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      background: white;
+      color: black;
       text-decoration: none;
-      color: #222;
-      font-weight: 600;
-      transition: all 0.2s ease;
+      padding: 12px 20px;
+      border-radius: 10px;
+      font-weight: bold;
+      transition: 0.3s;
     }
 
     .social-links a:hover {
-      transform: scale(1.05);
-      background-color: #f0f0f0;
+      background: #ddd;
     }
 
     footer {
       margin-top: 60px;
       font-size: 0.9rem;
-      color: rgba(255,255,255,0.7);
+      color: #aaa;
     }
   </style>
 </head>
 <body>
 
-  <!-- Arka Plan Videosu -->
-  <video autoplay muted loop id="bg-video" playsinline>
-    <source src="video.mp4" type="video/mp4" />
-    Tarayıcınız video etiketini desteklemiyor.
-  </video>
+  <!-- Müzik Butonu -->
+  <button id="music-button">🎵 Müzik Aç</button>
+
+  <!-- Müzik -->
+  <audio id="my-audio" loop>
+    <source src="mymusic.mp3" type="audio/mpeg" />
+    Tarayıcınız bu müziği desteklemiyor.
+  </audio>
 
   <!-- Profil Fotoğrafı -->
   <img src="https://raw.githubusercontent.com/uggiomer/site/main/pp%20dc.jpg" alt="Profil Fotoğrafı" />
@@ -102,6 +94,23 @@
   <footer>
     &copy; 2025 attempt by uggiomer :)
   </footer>
+
+  <script>
+    const btn = document.getElementById("music-button");
+    const audio = document.getElementById("my-audio");
+    let isPlaying = false;
+
+    btn.addEventListener("click", () => {
+      if (isPlaying) {
+        audio.pause();
+        btn.textContent = "🎵 Müzik Aç";
+      } else {
+        audio.play();
+        btn.textContent = "⏸️ Müzik Kapat";
+      }
+      isPlaying = !isPlaying;
+    });
+  </script>
 
 </body>
 </html>
