--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <title>uggiomer</title>
   <link rel="shortcut icon" href="dcs.ico" type="image/x-icon">
   <style>
-    /* Arka plan video ayarları */
     #bg-video {
       position: fixed;
       right: 0;
@@ -29,17 +28,16 @@
       color: white;
     }
 
-    /* Müzik Aç butonu */
     #music-button {
       position: fixed;
       top: 20px;
       right: 20px;
       z-index: 999;
       padding: 10px 20px;
-      background-color: rgba(255, 255, 255, 0.8);
-      color: #000;
+      background-color: rgba(255, 255, 255, 0.9);
+      color: black;
       border: none;
-      border-radius: 8px;
+      border-radius: 10px;
       font-weight: bold;
       cursor: pointer;
       box-shadow: 0 4px 8px rgba(0,0,0,0.2);
@@ -130,8 +128,12 @@
 
     musicButton.addEventListener('click', () => {
       if (music.paused) {
-        music.play();
-        musicButton.textContent = '⏸ Müzik Durdur';
+        music.play().then(() => {
+          musicButton.textContent = '⏸ Müzik Durdur';
+        }).catch(error => {
+          alert("Müzik çalınamadı. Tarayıcı engelliyor olabilir.");
+          console.error(error);
+        });
       } else {
         music.pause();
         musicButton.textContent = '🎵 Müzik Aç';
