--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
   <img src="https://raw.githubusercontent.com/uggiomer/site/main/pp%20dc.jpg" alt="Profil Fotoğrafı" />
 
   <h1>Hoş Geldin!</h1>
-  <p>Sosyal medya hesaplarım</p>
+  <p>uggisel işler</p>
 
   <div class="social-links">
     <a href="https://instagram.com/uggiomer18" target="_blank">📸 Instagram</a>
