sitem index.html
Updated Instagram link in the social links section.

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
   <p>uggisel işler</p>
 
   <div class="social-links">
-    <a href="https://instagram.com/uggiomer18" target="_blank">📸 Instagram</a>
+    <a href="https://instagram.com/uggireal" target="_blank">📸 Instagram</a>
     <a href="https://www.youtube.com/@uggi99" target="_blank">▶️ YouTube</a>
     <a href="https://discord.gg/cTfzBf4Cx3" target="_blank">💬 Discord</a>
     <a href="https://open.spotify.com/playlist/25Pc1B2hNdFlz84t2Pw0Hg?si=54bede176f2d4c86" target="_blank">🎧 Spotify</a>
@@ -143,3 +143,4 @@
 
 </body>
 </html>
+
